--- a/index.css
+++ b/index.css
@@ -22,15 +22,14 @@ a:link {
 	text-decoration: underline;
   }
 
-
-
 .bg1{
 	background-attachment: fixed;
 	position: absolute;
 	display: grid;
 	grid-template-columns: 1fr;
 	z-index: -50;
-	position: absolute;	
+	position: absolute;
+	
 }
 
 .everything{
@@ -502,7 +501,7 @@ animation-iteration-count: infinite;
 
    color: white;
    text-align: center;
-   line-height: 0.2em;
+   line-height: 1.5em;
 }
 .container{
   padding-top:2vh;
@@ -512,3 +511,9 @@ animation-iteration-count: infinite;
   padding-top: 2vh;
   margin: 2vw;
 }
+
+.container4{
+	padding-right: 1em;
+	padding-left: 1em;
+	
+  }
