--- a/index.css
+++ b/index.css
@@ -1,17 +1,17 @@
 a:link {
-	color: rgb(204, 140, 183);
+	color: #ffbd30;
 	background-color: transparent;
 	text-decoration: none;
   }
   
   a:visited {
-	color: pink;
+	color: rgb(52, 66, 255);
 	background-color: transparent;
 	text-decoration: none;
   }
   
   a:hover {
-	color: #FFDD30;
+	color: #e9c4ff;
 	background-color: transparent;
 	text-decoration: underline;
   }
@@ -21,6 +21,16 @@ a:link {
 	background-color: transparent;
 	text-decoration: underline;
   }
+
+.bg1{
+	background-attachment: fixed;
+	position: absolute;
+	display: grid;
+	grid-template-columns: 1fr;
+	z-index: -50;
+	position: absolute;
+	
+}
 
 .bg1{
 	background-attachment: fixed;
