--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 a:link {
-	color: #ffbd30;
+	color:rgb(218, 255, 52);
 	background-color: transparent;
 	text-decoration: none;
   }
   
   a:visited {
-	color: rgb(52, 66, 255);
+	color: #FFBD30;
 	background-color: transparent;
 	text-decoration: none;
   }
